--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                             <a href="#nosotros"
                                 class="flex items-center justify-center text-slate-950 hover:bg-amber-400 hover:text-slate-700 px-3 py-2 rounded-md text-md font-medium w-full h-14">Acerca
                                 de nosotros</a>
-                            <a href="#servicios"
+                            <a href="servicios/"
                                 class="flex items-center justify-center text-slate-950 hover:bg-amber-400 hover:text-slate-700 px-3 py-2 rounded-md text-md font-medium w-full h-14">Servicios</a>
                             <a href="#contacto"
                                 class="flex items-center justify-center text-slate-950 hover:bg-amber-400 hover:text-slate-700 px-3 py-2 rounded-md text-md font-medium w-full h-14">Contactanos</a>
@@ -42,7 +42,7 @@
                                 class="block bg-amber-600 text-slate-950 hover:bg-amber-500 hover:text-slate-500 py-5 w-screen text-md text-center font-medium"
                                 onclick="toggleMenu()">Acerca
                                 de nosotros</a>
-                            <a href="#servicios"
+                            <a href="servicios/"
                                 class="block  bg-amber-600 text-slate-950 hover:bg-amber-500 hover:text-slate-500 py-5 w-screen text-md text-center font-medium"
                                 onclick="toggleMenu()">Servicios</a>
                             <a href="#contacto"
