--- a/servicios/index.html
+++ b/servicios/index.html
@@ -8,18 +8,18 @@
     <link rel="icon" href="../img/logo.png">
 </head>
 <body class="bg-slate-950">
-    <header class="bg-amber-500 text-white py-8 fixed w-full z-50">
+    <header class="bg-amber-500 text-white py-8 fixed w-full z-50 shadow-slate-700 shadow-md">
         <nav class=" fixed top-0 left-0 w-full z-10">
             <div class="px-4">
                 <div class="flex items-center justify-between h-16 relative">
                     <div class="flex-shrink-0 pl-1">
-                        <a href="#inicio" class="text-white">
+                        <a href="../" class="text-white">
                             <img src="../img/logo.png" alt="Ferreteria Mica" class="w-20 h-20">
                         </a>
                     </div>
                     <div class="flex-1 sm:block hidden items-center content-center">
                         <div class="ml-10 flex flex-1 w-11/12 text-center">
-                            <a href="#inicio"
+                            <a href="../"
                                 class="flex items-center justify-center text-slate-950 hover:bg-amber-400 hover:text-slate-700 px-3 py-2 rounded-md text-md font-medium w-full h-14">Inicio</a>
                             <a href="#nosotros"
                                 class="flex items-center justify-center text-slate-950 hover:bg-amber-400 hover:text-slate-700 px-3 py-2 rounded-md text-md font-medium w-full h-14">Acerca
@@ -34,8 +34,8 @@
                         <button type="button"
                             class="text-slate-950 shadow-amber-800 shadow-md hover:bg-amber-400 hover:text-slate-700 px-2 py-2 rounded-md text-md font-medium focus:outline-none"
                             onclick="toggleMenu()">Menu</button>
-                        <div class="hidden flex-col bg-amber-600 mt-16 fixed top-0 right-0" id="menu-container">
-                            <a href="#inicio"
+                        <div class="hidden flex-col bg-amber-600 mt-16 fixed top-0 right-0" id="menu-container  shadow-slate-700 shadow-md">
+                            <a href="../"
                                 class="block bg-amber-600 text-slate-950 hover:bg-amber-500 hover:text-slate-500 py-5 w-screen text-md text-center font-medium"
                                 onclick="toggleMenu()">Inicio</a>
                             <a href="#nosotros"
@@ -105,7 +105,7 @@
         </div>
     </main>
 
-    <footer class="bg-amber-500 text-white mt-4 py-5">
+    <footer class="bg-amber-600 text-white mt-4 py-5">
         <div class="container mx-auto px-4">
             <p class="text-center">© 2024 Ferreteria Mica. Todos los derechos reservados.</p>
         </div>
