cambios estesteticos, visuales y funcionales.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="src/styles.css" rel="stylesheet">
     <link rel="icon" href="img/logo.png">
 </head>
-<body class="bg-slate-950">
+<body class="bg-slate-950 scroll-smooth">
     <header class="bg-amber-500 text-white py-8 fixed w-full z-50 shadow-slate-700 shadow-md">
         <nav class="fixed top-0 left-0 w-full z-10">
             <div class="px-4">
@@ -39,7 +39,7 @@
                                 class="block bg-amber-600 text-slate-950 hover:bg-amber-500 hover:text-slate-500 py-5 w-screen text-md text-center font-medium"
                                 onclick="toggleMenu()">Inicio</a>
                             <a href="#nosotros"
-                                class="block bg-amber-600 text-slate-950 hover:bg-amber-500 hover:text-slate-500 py-5 w-screen text-md text-center font-medium"
+                                class="block bg-amber-600 text-slate-950 hover:bg-amber-500 hover:text-slate-500 py-5 w-screen text-md text-center font-medium "
                                 onclick="toggleMenu()">Acerca
                                 de nosotros</a>
                             <a href="servicios/"
@@ -59,7 +59,7 @@
     <main id="inicio" class=" md:mx-auto md:px-4 md:py-8"> 
 
         <div class="flex justify-center items-center h-[75vh] ">
-            <h1 class="text-4xl font-bold text-orange-800 px-3 text-center">¡Bienvenido a Ferreteria Mica!</h1>
+            <h1 class="text-4xl font-bold text-orange-800 px-3 text-center text-shadow-amber-50">¡Bienvenido a Ferreteria Mica!</h1>
         </div>
         
         <div class="bg-amber-600 flex justify-center items-center mt-8 h-[75vh] shadow-amber-500 shadow-lg">
