cambios visuales en el nav y a lo largo de la pagina implementacion de xs.

--- a/index.html
+++ b/index.html
@@ -20,33 +20,33 @@
                     <div class="flex-1 sm:block hidden items-center content-center">
                         <div class="ml-10 flex flex-1 w-11/12 text-center">
                             <a href="#inicio"
-                                class="flex items-center justify-center text-slate-950 hover:bg-amber-400 hover:text-slate-700 px-3 py-2 rounded-md text-md font-medium w-full h-14">Inicio</a>
+                                class="flex items-center justify-center text-slate-950 hover:bg-amber-400 hover:text-slate-700 px-3 py-2 rounded-md text-lg font-medium w-full h-14">Inicio</a>
                             <a href="#nosotros"
-                                class="flex items-center justify-center text-slate-950 hover:bg-amber-400 hover:text-slate-700 px-3 py-2 rounded-md text-md font-medium w-full h-14">Acerca
+                                class="flex items-center justify-center text-slate-950 hover:bg-amber-400 hover:text-slate-700 px-3 py-2 rounded-md text-lg font-medium w-full h-14">Acerca
                                 de nosotros</a>
                             <a href="servicios/"
-                                class="flex items-center justify-center text-slate-950 hover:bg-amber-400 hover:text-slate-700 px-3 py-2 rounded-md text-md font-medium w-full h-14">Servicios</a>
+                                class="flex items-center justify-center text-slate-950 hover:bg-amber-400 hover:text-slate-700 px-3 py-2 rounded-md text-lg font-medium w-full h-14">Servicios</a>
                             <a href="#contacto"
-                                class="flex items-center justify-center text-slate-950 hover:bg-amber-400 hover:text-slate-700 px-3 py-2 rounded-md text-md font-medium w-full h-14">Contactanos</a>
+                                class="flex items-center justify-center text-slate-950 hover:bg-amber-400 hover:text-slate-700 px-3 py-2 rounded-md text-lg font-medium w-full h-14">Contactanos</a>
                         </div>
                     </div>
                     <div class="sm:hidden">
                         <button type="button"
-                            class="text-slate-950 shadow-amber-800 shadow-md hover:bg-amber-400 hover:text-slate-700 px-2 py-2 rounded-md text-md font-medium focus:outline-none"
+                            class="text-slate-950 shadow-amber-800 shadow-md hover:bg-amber-400 hover:text-slate-700 px-2 py-2 rounded-md text-lg font-medium focus:outline-none"
                             onclick="toggleMenu()">Menu</button>
                         <div class="hidden flex-col bg-amber-600 mt-16 fixed top-0 right-0 shadow-slate-700 shadow-md" id="menu-container">
                             <a href="#inicio"
-                                class="block bg-amber-600 text-slate-950 hover:bg-amber-500 hover:text-slate-500 py-5 w-screen text-md text-center font-medium"
+                                class="block bg-amber-600 text-slate-950 hover:bg-amber-500 hover:text-slate-500 py-5 w-screen text-lg text-center font-medium"
                                 onclick="toggleMenu()">Inicio</a>
                             <a href="#nosotros"
-                                class="block bg-amber-600 text-slate-950 hover:bg-amber-500 hover:text-slate-500 py-5 w-screen text-md text-center font-medium "
+                                class="block bg-amber-600 text-slate-950 hover:bg-amber-500 hover:text-slate-500 py-5 w-screen text-lg text-center font-medium "
                                 onclick="toggleMenu()">Acerca
                                 de nosotros</a>
                             <a href="servicios/"
-                                class="block  bg-amber-600 text-slate-950 hover:bg-amber-500 hover:text-slate-500 py-5 w-screen text-md text-center font-medium"
+                                class="block  bg-amber-600 text-slate-950 hover:bg-amber-500 hover:text-slate-500 py-5 w-screen text-lg text-center font-medium"
                                 onclick="toggleMenu()">Servicios</a>
                             <a href="#contacto"
-                                class="block  bg-amber-600 text-slate-950 hover:bg-amber-500 hover:text-slate-500 py-5 w-screen text-md text-center font-medium"
+                                class="block  bg-amber-600 text-slate-950 hover:bg-amber-500 hover:text-slate-500 py-5 w-screen text-lg text-center font-medium"
                                 onclick="toggleMenu()">Contáctanos</a>
                         </div>
                     </div>
@@ -58,13 +58,13 @@
     
     <main id="inicio" class=" md:mx-auto md:px-4 md:py-8"> 
 
-        <div class="flex justify-center items-center h-[75vh] ">
-            <h1 class="text-4xl font-bold text-orange-800 px-3 text-center text-shadow-amber-50">¡Bienvenido a Ferreteria Mica!</h1>
+        <div class="flex justify-center items-center h-[100vh] xs:h-[75vh] ">
+            <h1 class="text-5xl font-bold text-orange-800 px-3 text-center text-shadow-amber-50">¡Bienvenido a Ferreteria Mica!</h1>
         </div>
         
-        <div class="bg-amber-600 flex justify-center items-center mt-8 h-[75vh] shadow-amber-500 shadow-lg">
+        <div class="bg-amber-600 flex justify-center items-center mt-8 h-[100vh] xs:h-[75vh] shadow-amber-500 shadow-lg">
             <div class="text-center px-4">
-                <h2 class="text-3xl font-bold text-white mb-4">Acerca de Nosotros</h2>
+                <h2 class="text-5xl font-bold text-white mb-4">Acerca de Nosotros</h2>
                 <p class="text-white text-lg">Ferreteria Mica ofrece soluciones en materiales de construcción y herramientas para el hogar. Con más de 10 años de experiencia, brindamos productos de alta calidad y excelente servicio al cliente.</p>
                 <p class="text-white text-lg">Nuestro objetivo es satisfacer las necesidades de nuestros clientes, ofreciendo una amplia variedad de productos y asesoramiento personalizado.</p>
                 <a href="nosotros/"
@@ -72,17 +72,17 @@
             </div>
         </div>
 
-        <div class="flex justify-center items-center mt-8 h-[75vh]">
+        <div class="flex justify-center items-center mt-8 h-[100vh] xs:h-[75vh]">
             <div class="text-center px-4">
-                <h2 class="text-3xl font-bold text-white mb-4">Nuestros Servicios</h2>
+                <h2 class="text-5xl font-bold text-white mb-4">Nuestros Servicios</h2>
                 <p class="text-white text-lg">En Ferreteria Mica ofrecemos una amplia gama de servicios para satisfacer todas tus necesidades de construcción y reparación. Contamos con productos de alta calidad y personal capacitado para brindarte el mejor asesoramiento. Ya sea que necesites herramientas, materiales de construcción o productos para el hogar, ¡no dudes en consultar!</p>
                 <a href="servicios/" class="flex items-center justify-center bg-amber-600 hover:bg-amber-500 hover:text-slate-700 px-3 py-2 rounded-md text-md font-medium w-full h-14 mt-8 shadow-amber-500 shadow-lg">Ir a Servicios</a>
             </div>
         </div>
 
-        <div class="bg-amber-600 flex justify-center items-center my-8 h-[75vh]  shadow-amber-500 shadow-lg">
+        <div class="bg-amber-600 flex justify-center items-center my-8 h-[100vh] xs:h-[75vh]  shadow-amber-500 shadow-lg">
             <div class="text-center px-4 ">
-                <h2 class="text-3xl font-bold text-white mb-4">Contáctanos</h2>
+                <h2 class="text-5xl font-bold text-white mb-4">Contáctanos</h2>
                     <p class="text-white text-lg">Aceptamos efectivo, transferencia y débito como formas de pago. Además, ofrecemos envíos en el día.</p>
                     <p class="text-white text-lg">Si tienes alguna pregunta o consulta, no dudes en contactarnos. Estamos para ayudarte.</p>
                     <a href="contactanos/" class="flex items-center justify-center bg-slate-800 hover:bg-slate-700 text-slate-50 hover:text-slate-150 px-3 py-2 rounded-md text-md font-medium w-full h-14 mt-8 shadow-amber-500 shadow-lg">Ir a Contáctanos</a>
