agregamos los enlaces e imagenes faltantes.

--- a/contacto/index.html
+++ b/contacto/index.html
@@ -27,7 +27,7 @@
                             <a href="../servicios/"
                                 class="flex items-center justify-center text-slate-950 hover:bg-amber-400 hover:text-slate-700 px-3 py-2 rounded-md text-lg font-medium w-full h-14">Servicios</a>
                             <a href="#inicio"
-                                class="flex items-center justify-center text-slate-950 hover:bg-amber-400 hover:text-slate-700 px-3 py-2 rounded-md text-lg font-medium w-full h-14">Contactanos</a>
+                                class="flex items-center justify-center text-slate-950 hover:bg-amber-400 hover:text-slate-700 px-3 py-2 rounded-md text-lg font-medium w-full h-14">Contacto</a>
                         </div>
                     </div>
                     <div class="sm:hidden">
@@ -47,7 +47,7 @@
                                 onclick="toggleMenu()">Servicios</a>
                             <a href="#inicio"
                                 class="block  bg-amber-600 text-slate-950 hover:bg-amber-500 hover:text-slate-500 py-5 w-screen text-lg text-center font-medium"
-                                onclick="toggleMenu()">Contáctanos</a>
+                                onclick="toggleMenu()">Contacto</a>
                         </div>
                     </div>
                 </div>
@@ -65,27 +65,27 @@
                 <p class="text-white text-lg">Si tienes alguna pregunta o consulta, no dudes en contactarnos. Estamos para ayudarte.</p>
             
                 <div class="flex flex-col justify-center items-center text-ambar-50 mt-8 w-full">
-                        
-                    <a href="https://wa.me/1234567890" target="_blank" rel="noopener noreferrer" class="flex items-center justify-center my-2 w-3/4 h-20" class="flex items-center my-2">
+                    <a href="https://wa.me/+5491157124625?text=Hola%2C%20te%20hablo%20desde%20la%20página%20web%2C%20quiero%20hacer%20la%20siguiente%20consulta%3A" target="_blank" rel="noopener noreferrer" class="flex items-center justify-center my-2 w-3/4 h-20">
                         <img src="../img/icons/whatsapp.svg" alt="WhatsApp" class="w-8 h-8 mx-2">
                         <span class="ml-2 text-2xl text-amber-50">WhatsApp</span>
                     </a>
-                    <a href="tel:1234567890" target="_blank" rel="noopener noreferrer" class="flex items-center justify-center my-2 w-3/4 h-20">
-                        <img src="../img/phone.png" alt="Teléfono" class="w-8 h-8 mx-2">
+                    <a href="tel:+5491157124625" target="_blank" rel="noopener noreferrer" class="flex items-center justify-center my-2 w-3/4 h-20">
+                        <img src="../img/icons/phone.svg" alt="Teléfono" class="w-8 h-8 mx-2">
                         <span class="ml-2 text-2xl text-amber-50">Teléfono</span>
                     </a>
                     <a href="https://www.facebook.com/ferreteriamica" target="_blank" rel="noopener noreferrer" class="flex items-center justify-center my-2 w-3/4 h-20">
                         <img src="../img/icons/facebook1.svg" alt="Facebook" class="w-8 h-8 mx-2">
                         <span class="ml-2 text-2xl text-amber-50">Facebook</span>
                     </a>
-                    <a href="https://www.instagram.com/ferreteriamica" target="_blank" rel="noopener noreferrer" class="flex items-center justify-center my-2 w-3/4 h-20">
+                    <a href="https://www.instagram.com/ferreteria_mica" target="_blank" rel="noopener noreferrer" class="flex items-center justify-center my-2 w-3/4 h-20">
                         <img src="../img/icons/instagram.svg" alt="Instagram" class="w-8 h-8 mx-2">
                         <span class="ml-2 text-2xl text-amber-50">Instagram</span>
                     </a>
-                    <a href="https://goo.gl/maps/1234567890" target="_blank" rel="noopener noreferrer" class="flex items-center justify-center my-2 w-3/4 h-20">
-                        <img src="../img/location.png" alt="Ubicación" class="w-8 h-8 mx-2">
-                        <span class="ml-2 text-2xl text-amber-50">Ubicación</span>
+                    <a href="https://maps.app.goo.gl/AkYfJGDsLmnxkHmM8" target="_blank" rel="noopener noreferrer" class="flex items-center justify-center my-3 w-3/4 h-20">
+                        <img src="../img/icons/ubicacion.svg" alt="Ubicación" class="w-8 h-8 mx-2 mb-2">
+                        <span class="ml-2 text-2xl text-amber-50 text-center">Av. San Martín 2580, Quilmes Oeste, Provincia de Buenos Aires</span>
                     </a>
+                </div>
                 </div>
             </div>
         </div>
