--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                             <a href="servicios/"
                                 class="flex items-center justify-center text-slate-950 hover:bg-amber-400 hover:text-slate-700 px-3 py-2 rounded-md text-lg font-medium w-full h-14">Servicios</a>
                             <a href="contacto/"
-                                class="flex items-center justify-center text-slate-950 hover:bg-amber-400 hover:text-slate-700 px-3 py-2 rounded-md text-lg font-medium w-full h-14">Contactanos</a>
+                                class="flex items-center justify-center text-slate-950 hover:bg-amber-400 hover:text-slate-700 px-3 py-2 rounded-md text-lg font-medium w-full h-14">Contacto</a>
                         </div>
                     </div>
                     <div class="sm:hidden">
@@ -47,7 +47,7 @@
                                 onclick="toggleMenu()">Servicios</a>
                             <a href="contacto/"
                                 class="block  bg-amber-600 text-slate-950 hover:bg-amber-500 hover:text-slate-500 py-5 w-screen text-lg text-center font-medium"
-                                onclick="toggleMenu()">Contáctanos</a>
+                                onclick="toggleMenu()">Contacto</a>
                         </div>
                     </div>
                 </div>
@@ -85,7 +85,7 @@
                 <h2 class="text-5xl font-bold text-white mb-4">Contáctanos</h2>
                     <p class="text-white text-lg">Aceptamos efectivo, transferencia y débito como formas de pago. Además, ofrecemos envíos en el día.</p>
                     <p class="text-white text-lg">Si tienes alguna pregunta o consulta, no dudes en contactarnos. Estamos para ayudarte.</p>
-                    <a href="contacto/" class="flex items-center justify-center bg-slate-800 hover:bg-slate-700 text-slate-50 hover:text-slate-150 px-3 py-2 rounded-md text-md font-medium w-full h-14 mt-8 shadow-amber-500 shadow-lg">Ir a Contáctanos</a>
+                    <a href="contacto/" class="flex items-center justify-center bg-slate-800 hover:bg-slate-700 text-slate-50 hover:text-slate-150 px-3 py-2 rounded-md text-md font-medium w-full h-14 mt-8 shadow-amber-500 shadow-lg">Ir a Contacto</a>
             </div>
         </div>
     </main>
