--- a/servicios/index.html
+++ b/servicios/index.html
@@ -26,8 +26,8 @@
                                 de nosotros</a>
                             <a href="#inicio"
                                 class="flex items-center justify-center text-slate-950 hover:bg-amber-400 hover:text-slate-700 px-3 py-2 rounded-md text-lg font-medium w-full h-14">Servicios</a>
-                            <a href="#contacto"
-                                class="flex items-center justify-center text-slate-950 hover:bg-amber-400 hover:text-slate-700 px-3 py-2 rounded-md text-lg font-medium w-full h-14">Contactanos</a>
+                            <a href="../contacto"
+                                class="flex items-center justify-center text-slate-950 hover:bg-amber-400 hover:text-slate-700 px-3 py-2 rounded-md text-lg font-medium w-full h-14">Contacto</a>
                         </div>
                     </div>
                     <div class="sm:hidden">
@@ -45,9 +45,9 @@
                             <a href="#inicio"
                                 class="block  bg-amber-600 text-slate-950 hover:bg-amber-500 hover:text-slate-500 py-5 w-screen text-lg text-center font-medium"
                                 onclick="toggleMenu()">Servicios</a>
-                            <a href="#contacto"
+                            <a href="../contacto/"
                                 class="block  bg-amber-600 text-slate-950 hover:bg-amber-500 hover:text-slate-500 py-5 w-screen text-lg text-center font-medium"
-                                onclick="toggleMenu()">Contáctanos</a>
+                                onclick="toggleMenu()">Contacto</a>
                         </div>
                     </div>
                 </div>
