--- a/servicios/index.html
+++ b/servicios/index.html
@@ -21,12 +21,12 @@
                         <div class="ml-10 flex flex-1 w-11/12 text-center">
                             <a href="../"
                                 class="flex items-center justify-center text-slate-950 hover:bg-amber-400 hover:text-slate-700 px-3 py-2 rounded-md text-lg font-medium w-full h-14">Inicio</a>
-                            <a href="#nosotros"
+                            <a href="../nosotros/"
                                 class="flex items-center justify-center text-slate-950 hover:bg-amber-400 hover:text-slate-700 px-3 py-2 rounded-md text-lg font-medium w-full h-14">Acerca
                                 de nosotros</a>
                             <a href="#inicio"
                                 class="flex items-center justify-center text-slate-950 hover:bg-amber-400 hover:text-slate-700 px-3 py-2 rounded-md text-lg font-medium w-full h-14">Servicios</a>
-                            <a href="../contacto"
+                            <a href="../contacto/"
                                 class="flex items-center justify-center text-slate-950 hover:bg-amber-400 hover:text-slate-700 px-3 py-2 rounded-md text-lg font-medium w-full h-14">Contacto</a>
                         </div>
                     </div>
@@ -38,7 +38,7 @@
                             <a href="../"
                                 class="block bg-amber-600 text-slate-950 hover:bg-amber-500 hover:text-slate-500 py-5 w-screen text-lg text-center font-medium"
                                 onclick="toggleMenu()">Inicio</a>
-                            <a href="#nosotros"
+                            <a href="../nosotros/"
                                 class="block bg-amber-600 text-slate-950 hover:bg-amber-500 hover:text-slate-500 py-5 w-screen text-lg text-center font-medium"
                                 onclick="toggleMenu()">Acerca
                                 de nosotros</a>
