--- a/servicios/index.html
+++ b/servicios/index.html
@@ -66,40 +66,40 @@
         
         
         <div class="grid md:grid-cols-3 grid-cols-1 md:gap-4 aspect-[1/8] md:aspect-[4/3]">
-            <div class="bg-amber-200 bg-[url('../img/Herramientas4.jpeg')] bg-cover bg-center md:p-4  transition-transform duration-10000 md:hover:bg-[length:110%] md:hover:scale-105 shadow-slate-500 shadow-2xl flex flex-col justify-center md:justify-between items-center">
-                <h2 class="text-5xl md:text-4xl font-bold mb-2 text-orange-800 xs:px-2 text-center text-shadow-double-amber-50-slate-900">Herramientas</h2>
+            <div class="bg-amber-200 bg-[url('../img/Herramientas4.jpeg')] bg-cover bg-center md:p-4  transition-transform duration-10000 md:hover:bg-[length:110%] md:hover:scale-105 shadow-slate-500 shadow-2xl flex flex-col justify-center items-center">
+                <h2 class="text-5xl font-bold mb-2 text-orange-800 xs:px-2 text-center text-shadow-double-amber-50-slate-900">Herramientas</h2>
                 <p class="text-2xl md:text-2xl text-orange-800 px-3 text-center text-shadow-double-amber-50-slate-900 font-medium">Encuentra las mejores herramientas para tus proyectos de construcción.</p>
             </div>
-            <div class="bg-amber-200 bg-[url('../img/Materiales_construccion.jpeg')] bg-cover bg-center md:p-4  transition-transform duration-10000 md:hover:bg-[length:110%] md:hover:scale-105 shadow-slate-500 shadow-2xl flex flex-col justify-center md:justify-between items-center">
-                <h2 class="text-5xl md:text-4xl font-bold mb-2 text-orange-800 text-center text-shadow-double-amber-50-slate-900 px-1.5">Materiales de construcción</h2>
+            <div class="bg-amber-200 bg-[url('../img/Materiales_construccion.jpeg')] bg-cover bg-center md:p-4  transition-transform duration-10000 md:hover:bg-[length:110%] md:hover:scale-105 shadow-slate-500 shadow-2xl flex flex-col justify-center items-center">
+                <h2 class="text-5xl font-bold mb-2 text-orange-800 text-center text-shadow-double-amber-50-slate-900 px-1.5">Materiales de construcción</h2>
                 <p class="text-2xl md:text-2xl text-orange-800 px-3 text-center text-shadow-double-amber-50-slate-900 font-medium">Amplia selección de materiales de construcción de alta calidad.</p>
             </div>
-            <div class="bg-amber-200 bg-[url('../img/Bulones.jpeg')] bg-cover bg-center md:p-4  transition-transform duration-10000 md:hover:bg-[length:110%] md:hover:scale-105 shadow-slate-500 shadow-2xl flex flex-col justify-center md:justify-between items-center">
-                <h2 class="text-5xl md:text-4xl font-bold mb-2 text-orange-800 px-3 text-center text-shadow-double-amber-50-slate-900">Bulones</h2>
+            <div class="bg-amber-200 bg-[url('../img/Bulones.jpeg')] bg-cover bg-center md:p-4  transition-transform duration-10000 md:hover:bg-[length:110%] md:hover:scale-105 shadow-slate-500 shadow-2xl flex flex-col justify-center items-center">
+                <h2 class="text-5xl font-bold mb-2 text-orange-800 px-3 text-center text-shadow-double-amber-50-slate-900">Bulones</h2>
                 <p class="text-2xl md:text-2xl text-orange-800 px-3 text-center text-shadow-double-amber-50-slate-900 font-medium">Gran variedad de bulones para tus proyectos de construcción.</p>
             </div>
-            <div class="bg-amber-200 bg-[url('../img/Oxigeno1.jpeg')] bg-cover bg-center md:p-4  transition-transform duration-10000 md:hover:bg-[length:110%] md:hover:scale-105 shadow-slate-500 shadow-2xl flex flex-col justify-center md:justify-between items-center">
-                <h2 class="text-5xl md:text-4xl font-bold mb-2 text-orange-800 px-3 text-center text-shadow-double-amber-50-slate-900">Oxígeno</h2>
+            <div class="bg-amber-200 bg-[url('../img/Oxigeno1.jpeg')] bg-cover bg-center md:p-4  transition-transform duration-10000 md:hover:bg-[length:110%] md:hover:scale-105 shadow-slate-500 shadow-2xl flex flex-col justify-center items-center">
+                <h2 class="text-5xl font-bold mb-2 text-orange-800 px-3 text-center text-shadow-double-amber-50-slate-900">Oxígeno</h2>
                 <p class="text-2xl md:text-2xl text-orange-800 px-3 text-center text-shadow-double-amber-50-slate-900 font-medium">Suministro de oxígeno para soldaduras y otros usos.</p>
             </div>
-            <div class="bg-amber-200 bg-[url('../img/Sanitarios.jpeg')] bg-cover bg-center md:p-4  transition-transform duration-10000 md:hover:bg-[length:110%] md:hover:scale-105 shadow-slate-500 shadow-2xl flex flex-col justify-center md:justify-between items-center">
-                <h2 class="text-5xl md:text-4xl font-bold mb-2 text-orange-800 px-3 text-center text-shadow-double-amber-50-slate-900">Sanitarios</h2>
+            <div class="bg-amber-200 bg-[url('../img/Sanitarios.jpeg')] bg-cover bg-center md:p-4  transition-transform duration-10000 md:hover:bg-[length:110%] md:hover:scale-105 shadow-slate-500 shadow-2xl flex flex-col justify-center items-center">
+                <h2 class="text-5xl font-bold mb-2 text-orange-800 px-3 text-center text-shadow-double-amber-50-slate-900">Sanitarios</h2>
                 <p class="text-2xl md:text-2xl text-orange-800 px-3 text-center text-shadow-double-amber-50-slate-900 font-medium">Productos sanitarios para baños y cocinas.</p>
             </div>
-            <div class="bg-amber-200 bg-[url('../img/Pinturas3.jpeg')] bg-cover bg-center md:p-4  transition-transform duration-10000 md:hover:bg-[length:110%] md:hover:scale-105 shadow-slate-500 shadow-2xl flex flex-col justify-center md:justify-between items-center">
-                <h2 class="text-5xl md:text-4xl font-bold mb-2 text-orange-800 px-3 text-center text-shadow-double-amber-50-slate-900">Pinturas</h2>
+            <div class="bg-amber-200 bg-[url('../img/Pinturas3.jpeg')] bg-cover bg-center md:p-4  transition-transform duration-10000 md:hover:bg-[length:110%] md:hover:scale-105 shadow-slate-500 shadow-2xl flex flex-col justify-center items-center">
+                <h2 class="text-5xl font-bold mb-2 text-orange-800 px-3 text-center text-shadow-double-amber-50-slate-900">Pinturas</h2>
                 <p class="text-2xl md:text-2xl text-orange-800 px-3 text-center text-shadow-double-amber-50-slate-900 font-medium">Amplia gama de pinturas para interiores y exteriores.</p>
             </div>
-            <div class="bg-amber-200 bg-[url('../img/Electricidad4.jpeg')] bg-cover bg-center md:p-4  transition-transform duration-10000 md:hover:bg-[length:110%] md:hover:scale-105 shadow-slate-500 shadow-2xl flex flex-col justify-center md:justify-between items-center">
-                <h2 class="text-5xl md:text-4xl font-bold mb-2 text-orange-800 px-3 text-center text-shadow-double-amber-50-slate-900">Electricidad</h2>
+            <div class="bg-amber-200 bg-[url('../img/Electricidad4.jpeg')] bg-cover bg-center md:p-4  transition-transform duration-10000 md:hover:bg-[length:110%] md:hover:scale-105 shadow-slate-500 shadow-2xl flex flex-col justify-center items-center">
+                <h2 class="text-5xl font-bold mb-2 text-orange-800 px-3 text-center text-shadow-double-amber-50-slate-900">Electricidad</h2>
                 <p class="text-2xl md:text-2xl text-orange-800 px-3 text-center text-shadow-double-amber-50-slate-900 font-medium">Productos y materiales eléctricos para tus proyectos.</p>
             </div>
-            <div class="bg-amber-200 bg-[url('../img/Accesorios3.jpeg')] bg-cover bg-center md:p-4  transition-transform duration-10000 md:hover:bg-[length:110%] md:hover:scale-105 shadow-slate-500 shadow-2xl flex flex-col justify-center md:justify-between items-center">
-                <h2 class="text-5xl md:text-4xl font-bold mb-2 text-orange-800 px-3 text-center text-shadow-double-amber-50-slate-900">Accesorios</h2>
+            <div class="bg-amber-200 bg-[url('../img/Accesorios3.jpeg')] bg-cover bg-center md:p-4  transition-transform duration-10000 md:hover:bg-[length:110%] md:hover:scale-105 shadow-slate-500 shadow-2xl flex flex-col justify-center items-center">
+                <h2 class="text-5xl font-bold mb-2 text-orange-800 px-3 text-center text-shadow-double-amber-50-slate-900">Accesorios</h2>
                 <p class="text-2xl md:text-2xl text-orange-800 px-3 text-center text-shadow-double-amber-50-slate-900 font-medium">Todo tipo de accesorios para complementar tus proyectos.</p>
             </div>
-            <div class="bg-amber-200 bg-[url('../img/Jardineria.jpeg')] bg-cover bg-center md:p-4  transition-transform duration-10000 md:hover:bg-[length:110%] md:hover:scale-105 shadow-slate-500 shadow-2xl flex flex-col justify-center md:justify-between items-center">
-                <h2 class="text-5xl md:text-4xl font-bold mb-2 text-orange-800 px-3 text-center text-shadow-double-amber-50-slate-900">Jardinería</h2>
+            <div class="bg-amber-200 bg-[url('../img/Jardineria.jpeg')] bg-cover bg-center md:p-4  transition-transform duration-10000 md:hover:bg-[length:110%] md:hover:scale-105 shadow-slate-500 shadow-2xl flex flex-col justify-center items-center">
+                <h2 class="text-5xl font-bold mb-2 text-orange-800 px-3 text-center text-shadow-double-amber-50-slate-900">Jardinería</h2>
                 <p class="text-2xl md:text-2xl text-orange-800 px-3 text-center text-shadow-double-amber-50-slate-900 font-medium">Todo lo que necesitas para tu jardín: Herramientas, macetas y más.</p>
             </div>
         </div>
