--- a/contacto/index.html
+++ b/contacto/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="../img/logo.png">
 </head>
 <body class="bg-slate-950 scroll-smooth">
-    <header class="bg-amber-500 text-white py-8 fixed w-full z-50 shadow-slate-700 shadow-md">
+    <header class="bg-amber-500 text-white py-8 fixed w-screen z-50 shadow-slate-700 shadow-md">
         <nav class="fixed top-0 left-0 w-full z-10">
             <div class="px-4">
                 <div class="flex items-center justify-between h-16 relative">
@@ -83,7 +83,7 @@
                     </a>
                     <a href="https://maps.app.goo.gl/AkYfJGDsLmnxkHmM8" target="_blank" rel="noopener noreferrer" class="flex items-center justify-center my-3 w-3/4 h-20">
                         <img src="../img/icons/ubicacion.svg" alt="Ubicación" class="w-8 h-8 mx-2 mb-2">
-                        <span class="ml-2 text-2xl text-amber-50 text-center">Av. San Martín 2580, Quilmes Oeste, Provincia de Buenos Aires</span>
+                        <span class="ml-2 text-xl sm:text-2xl text-amber-50 text-center">Av. San Martín 2580, Quilmes Oeste, Provincia de Buenos Aires</span>
                     </a>
                 </div>
                 </div>
