--- a/servicios/index.html
+++ b/servicios/index.html
@@ -103,6 +103,13 @@
                 <p class="text-2xl md:text-2xl text-orange-800 px-3 text-center text-shadow-double-amber-50-slate-900 font-medium">Todo lo que necesitas para tu jardín: Herramientas, macetas y más.</p>
             </div>
         </div>
+        <div class="bg-amber-600 flex justify-center items-center my-8 h-[100vh] xs:h-[75vh]  shadow-amber-500 shadow-lg">
+            <div class="text-center px-4 ">
+                <h2 class="text-5xl font-bold text-white mb-4">Contáctanos</h2>
+                <p class="text-white text-xl">Si tienes alguna pregunta o consulta, no dudes en contactarnos. Estamos para ayudarte.</p>
+                <a href="../contacto/" class="flex items-center justify-center bg-slate-800 hover:bg-slate-700 text-slate-50 hover:text-slate-150 px-3 py-2 rounded-md text-md font-medium w-full h-14 mt-8 shadow-amber-500 shadow-lg">Ir a Contacto</a>
+            </div>
+        </div>
     </main>
 
     <footer class="bg-amber-600 text-white mt-4 py-5">
