--- a/index.html
+++ b/index.html
@@ -6,6 +6,26 @@
     <title>Ferreteria Mica</title>
     <link href="src/styles.css" rel="stylesheet">
     <link rel="icon" href="img/logo.png">
+
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="Ferreteria Mica ofrece soluciones en materiales de construcción y herramientas para el hogar. Con más de 10 años de experiencia, brindamos productos de alta calidad y excelente servicio al cliente.">
+    <meta name="keywords" content="ferreteria, construcción, herramientas, hogar, materiales, calidad, servicio al cliente">
+    <meta name="author" content="Ferreteria Mica">
+    <meta name="robots" content="index, follow">
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://ferreteria-mica.vercel.app/">
+    <meta property="og:title" content="Ferreteria Mica">
+    <meta property="og:description" content="Ferreteria Mica ofrece soluciones en materiales de construcción y herramientas para el hogar. Con más de 10 años de experiencia, brindamos productos de alta calidad y excelente servicio al cliente.">
+    <meta property="og:image" content="https://ferreteria-mica.vercel.app/img/logo.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://ferreteria-mica.vercel.app/">
+    <meta property="twitter:title" content="Ferreteria Mica">
+    <meta property="twitter:description" content="Ferreteria Mica ofrece soluciones en materiales de construcción y herramientas para el hogar. Con más de 10 años de experiencia, brindamos productos de alta calidad y excelente servicio al cliente.">
+    <meta property="twitter:image" content="https://ferreteria-mica.vercel.app/img/logo.png">
 </head>
 <body class="bg-slate-950 scroll-smooth">
     <header class="bg-amber-500 text-white py-8 fixed w-full z-50 shadow-slate-700 shadow-md">
