--- a/nosotros/index.html
+++ b/nosotros/index.html
@@ -54,7 +54,7 @@
                             class="text-slate-950 shadow-amber-800 shadow-md hover:bg-amber-400 hover:text-slate-700 px-2 py-2 rounded-md text-lg font-medium focus:outline-none"
                             onclick="toggleMenu()">Menu</button>
                         <div class="hidden flex-col bg-amber-600 mt-16 fixed top-0 right-0 shadow-slate-700 shadow-md" id="menu-container">
-                            <a href="../inicio"
+                            <a href="../"
                                 class="block bg-amber-600 text-slate-950 hover:bg-amber-500 hover:text-slate-500 py-5 w-screen text-lg text-center font-medium"
                                 onclick="toggleMenu()">Inicio</a>
                             <a href="#inicio"
