cambio aal logo original, cambios en informacion para agregar que hay ofertas.

--- a/servicios/index.html
+++ b/servicios/index.html
@@ -32,7 +32,7 @@
                 <div class="flex items-center justify-between h-16 relative">
                     <div class="flex-shrink-0 pl-1">
                         <a href="../" class="text-white">
-                            <img src="../img/logo.png" alt="Ferreteria Mica" class="w-20 h-20">
+                            <img src="../img/logo.png" alt="Ferreteria Mica" class="w-24 h-12">
                         </a>
                     </div>
                     <div class="flex-1 sm:block hidden items-center content-center">
@@ -124,7 +124,7 @@
         <div class="bg-amber-600 flex justify-center items-center my-8 h-[100vh] xs:h-[75vh]  shadow-amber-500 shadow-lg">
             <div class="text-center px-4 ">
                 <h2 class="text-5xl font-bold text-white mb-4">Contáctanos</h2>
-                <p class="text-white text-xl">Si tienes alguna pregunta o consulta, no dudes en contactarnos. Estamos para ayudarte.</p>
+                <p class="text-white text-xl">Si tienes alguna pregunta, consulta o queres conocer nuestras ofertas, no dudes en contactarnos. Estamos para ayudarte.</p>
                 <a href="../contacto/" class="flex items-center justify-center bg-slate-800 hover:bg-slate-700 text-slate-50 hover:text-slate-150 px-3 py-2 rounded-md text-md font-medium w-full h-14 mt-8 shadow-amber-500 shadow-lg">Ir a Contacto</a>
             </div>
         </div>
