--- a/contacto/index.html
+++ b/contacto/index.html
@@ -33,7 +33,7 @@
                 <div class="flex items-center justify-between h-16 relative">
                     <div class="flex-shrink-0 pl-1">
                         <a href="../" class="text-white">
-                            <img src="../img/logo.png" alt="Ferreteria Mica" class="w-20 h-20">
+                            <img src="../img/logo.png" alt="Ferreteria Mica" class="w-24 h-12">
                         </a>
                     </div>
                     <div class="flex-1 sm:block hidden items-center content-center">
@@ -81,7 +81,7 @@
             <div class="text-center px-4 mt-24">
                 <h2 class="text-5xl font-bold text-white mb-4 ">Contáctanos</h2>
                 <p class="text-white text-lg">Aceptamos efectivo, transferencia y débito como formas de pago. Además, ofrecemos envíos en el mismo día.</p>
-                <p class="text-white text-lg">Si tienes alguna pregunta o consulta, no dudes en contactarnos. Estamos para ayudarte.</p>
+                <p class="text-white text-lg">Si tienes alguna pregunta, consulta o queres conocer nuestras ofertas, no dudes en contactarnos. Estamos para ayudarte.</p>
             
                 <div class="flex flex-col justify-center items-center text-ambar-50 mt-8 w-full">
                     <a href="https://wa.me/+5491157124625?text=Hola%2C%20te%20hablo%20desde%20la%20página%20web%2C%20quiero%20hacer%20la%20siguiente%20consulta%3A" target="_blank" rel="noopener noreferrer" class="flex items-center justify-center my-2 w-3/4 h-20">
