--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="img/logo.png">
 
     <!-- SEO Meta Tags -->
-    <meta name="description" content="Ferreteria Mica ofrece soluciones en materiales de construcción y herramientas para el hogar. Con más de 24 años de experiencia, brindamos productos de alta calidad y excelente servicio al cliente.">
+    <meta name="description" content="Ferreteria Mica ofrece soluciones en materiales de construcción y herramientas para el hogar. Con más de 25 años de experiencia, brindamos productos de alta calidad y excelente servicio al cliente.">
     <meta name="keywords" content="ferreteria, construcción, herramientas, hogar, materiales, calidad, servicio al cliente">
     <meta name="author" content="Ferreteria Mica">
     <meta name="robots" content="index, follow">
@@ -17,14 +17,14 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://ferreteria-mica.vercel.app/">
     <meta property="og:title" content="Ferreteria Mica">
-    <meta property="og:description" content="Ferreteria Mica ofrece soluciones en materiales de construcción y herramientas para el hogar. Con más de 24 años de experiencia, brindamos productos de alta calidad y excelente servicio al cliente.">
+    <meta property="og:description" content="Ferreteria Mica ofrece soluciones en materiales de construcción y herramientas para el hogar. Con más de 25 años de experiencia, brindamos productos de alta calidad y excelente servicio al cliente.">
     <meta property="og:image" content="https://ferreteria-mica.vercel.app/img/logo.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://ferreteria-mica.vercel.app/">
     <meta property="twitter:title" content="Ferreteria Mica">
-    <meta property="twitter:description" content="Ferreteria Mica ofrece soluciones en materiales de construcción y herramientas para el hogar. Con más de 24 años de experiencia, brindamos productos de alta calidad y excelente servicio al cliente.">
+    <meta property="twitter:description" content="Ferreteria Mica ofrece soluciones en materiales de construcción y herramientas para el hogar. Con más de 25 años de experiencia, brindamos productos de alta calidad y excelente servicio al cliente.">
     <meta property="twitter:image" content="https://ferreteria-mica.vercel.app/img/logo.png">
 </head>
 <body class="bg-slate-950 scroll-smooth">
@@ -34,7 +34,7 @@
                 <div class="flex items-center justify-between h-16 relative">
                     <div class="flex-shrink-0 pl-1">
                         <a href="#inicio" class="text-white">
-                            <img src="img/logo.png" alt="Ferreteria Mica" class="w-20 h-20">
+                            <img src="img/logo.png" alt="Ferreteria Mica" class="w-24 h-12">
                         </a>
                     </div>
                     <div class="flex-1 sm:block hidden items-center content-center">
@@ -85,7 +85,7 @@
         <div class="bg-amber-600 flex justify-center items-center mt-8 h-[100vh] xs:h-[75vh] shadow-amber-500 shadow-lg">
             <div class="text-center px-4">
                 <h2 class="text-5xl font-bold text-white mb-4">Acerca de Nosotros</h2>
-                <p class="text-white text-lg">Ferreteria Mica ofrece soluciones en materiales de construcción y herramientas para el hogar. Con más de 24 años de experiencia, brindamos productos de alta calidad y excelente servicio al cliente.</p>
+                <p class="text-white text-lg">Ferreteria Mica ofrece soluciones en materiales de construcción y herramientas para el hogar. Con más de 25 años de experiencia, brindamos productos de alta calidad y excelente servicio al cliente.</p>
                 <p class="text-white text-lg">Nuestro objetivo es satisfacer las necesidades de nuestros clientes, ofreciendo una amplia variedad de productos y asesoramiento personalizado.</p>
                 <a href="nosotros/"
                     class="flex items-center justify-center bg-slate-800 hover:bg-slate-700 text-slate-50 hover:text-slate-150 px-3 py-2 rounded-md text-md font-medium w-full h-14 mt-8 shadow-amber-500 shadow-lg">Ir a Nosotros</a>
@@ -104,7 +104,7 @@
             <div class="text-center px-4 ">
                 <h2 class="text-5xl font-bold text-white mb-4">Contáctanos</h2>
                     <p class="text-white text-lg">Aceptamos efectivo, transferencia y débito como formas de pago. Además, ofrecemos envíos en el día.</p>
-                    <p class="text-white text-lg">Si tienes alguna pregunta o consulta, no dudes en contactarnos. Estamos para ayudarte.</p>
+                    <p class="text-white text-lg">Si tienes alguna pregunta,consulta o queres conocer nuestras ofertas, no dudes en contactarnos. Estamos para ayudarte.</p>
                     <a href="contacto/" class="flex items-center justify-center bg-slate-800 hover:bg-slate-700 text-slate-50 hover:text-slate-150 px-3 py-2 rounded-md text-md font-medium w-full h-14 mt-8 shadow-amber-500 shadow-lg">Ir a Contacto</a>
             </div>
         </div>
