--- a/nosotros/index.html
+++ b/nosotros/index.html
@@ -33,7 +33,7 @@
                 <div class="flex items-center justify-between h-16 relative">
                     <div class="flex-shrink-0 pl-1">
                         <a href="../" class="text-white">
-                            <img src="../img/logo.png" alt="Ferreteria Mica" class="w-20 h-20">
+                            <img src="../img/logo.png" alt="Ferreteria Mica" class="w-24 h-12">
                         </a>
                     </div>
                     <div class="flex-1 sm:block hidden items-center content-center">
@@ -85,7 +85,7 @@
         <div class="bg-amber-600 flex justify-center items-center mt-8 h-[100vh] xs:h-[75vh] shadow-amber-500 shadow-lg">
             <div class="text-center px-4">
             <h2 class="text-5xl font-bold text-white mb-4">Quiénes Somos</h2>
-            <p class="text-white text-xl">En Ferreteria Mica somos una empresa dedicada a ofrecer soluciones en materiales de construcción y herramientas para el hogar. Con más de 24 años de experiencia, nos destacamos por brindar productos de alta calidad y un excelente servicio al cliente.</p>
+            <p class="text-white text-xl">En Ferreteria Mica somos una empresa dedicada a ofrecer soluciones en materiales de construcción y herramientas para el hogar. Con más de 25 años de experiencia, nos destacamos por brindar productos de alta calidad y un excelente servicio al cliente.</p>
             <p class="text-white text-xl">Nuestro objetivo principal es satisfacer las necesidades de nuestros clientes, ofreciendo una amplia variedad de productos y un asesoramiento personalizado. Nos enorgullece ser una empresa confiable y comprometida con la satisfacción de nuestros clientes.</p>
             </div>
         </div>
@@ -93,7 +93,7 @@
         <div class="flex justify-center items-center mt-8 h-[100vh] xs:h-[75vh]">
             <div class="text-center px-4">
                 <h2 class="text-5xl font-bold text-white mb-4">¿Por qué Nosotros?</h2>
-                <p class="text-white text-xl">En Ferreteria Mica, nos destacamos por ofrecer productos de alta calidad y un servicio al cliente excepcional. Nuestro equipo está compuesto por profesionales capacitados que están siempre dispuestos a brindarte el mejor asesoramiento. Elegirnos significa optar por una empresa comprometida con la satisfacción de sus clientes, ofreciendo una amplia variedad de productos y soluciones personalizadas para todas tus necesidades de construcción y reparación. Con más de 24 años de experiencia en el mercado, somos tu mejor opción para proyectos grandes y pequeños.</p>
+                <p class="text-white text-xl">En Ferreteria Mica, nos destacamos por ofrecer productos de alta calidad y un servicio al cliente excepcional. Nuestro equipo está compuesto por profesionales capacitados que están siempre dispuestos a brindarte el mejor asesoramiento. Elegirnos significa optar por una empresa comprometida con la satisfacción de sus clientes, ofreciendo una amplia variedad de productos y soluciones personalizadas para todas tus necesidades de construcción y reparación. Con más de 25 años de experiencia en el mercado, somos tu mejor opción para proyectos grandes y pequeños.</p>
             </div>
         </div>
 
@@ -118,7 +118,7 @@
             <div class="bg-amber-600 flex justify-center items-center my-8 h-[100vh] xs:h-[75vh]  shadow-amber-500 shadow-lg">
                 <div class="text-center px-4 ">
                     <h2 class="text-5xl font-bold text-white mb-4">Contáctanos</h2>
-                    <p class="text-white text-xl">Si tienes alguna pregunta o consulta, no dudes en contactarnos. Estamos para ayudarte.</p>
+                    <p class="text-white text-xl">Si tienes alguna pregunta, consulta o queres conocer nuestras ofertas, no dudes en contactarnos. Estamos para ayudarte.</p>
                     <a href="../contacto/" class="flex items-center justify-center bg-slate-800 hover:bg-slate-700 text-slate-50 hover:text-slate-150 px-3 py-2 rounded-md text-md font-medium w-full h-14 mt-8 shadow-amber-500 shadow-lg">Ir a Contacto</a>
                 </div>
             </div>
