agregamos meta etiquetas para mejorar el seo

--- a/index.html
+++ b/index.html
@@ -26,6 +26,14 @@
     <meta property="twitter:title" content="Ferreteria Mica">
     <meta property="twitter:description" content="Ferreteria Mica ofrece soluciones en materiales de construcción y herramientas para el hogar. Con más de 25 años de experiencia, brindamos productos de alta calidad y excelente servicio al cliente.">
     <meta property="twitter:image" content="https://ferreteria-mica.vercel.app/img/logo.png">
+
+    <!-- Geolocation Meta Tag -->
+    <meta name="geo.position" content="-34.7719616;-58.3217796">
+
+    <meta name="rating" content="general">
+    <meta name="distribution" content="global">
+    <meta name="audience" content="all">
+    <meta name="subject" content="Ferretería y herramientas">
 </head>
 <body class="bg-slate-950 scroll-smooth">
     <header class="bg-amber-500 text-white py-8 fixed w-full z-50 shadow-slate-700 shadow-md">
