fix bug en contactanos

--- a/contacto/index.html
+++ b/contacto/index.html
@@ -34,7 +34,7 @@
     <meta name="subject" content="Ferretería y herramientas">
 </head>
 <body class="bg-slate-950 scroll-smooth">
-    <header class="bg-amber-500 text-white py-8 fixed w-screen z-50 shadow-slate-700 shadow-md">
+    <header class="bg-amber-500 text-white py-8 fixed w-full z-50 shadow-slate-700 shadow-md">
         <nav class="fixed top-0 left-0 w-full z-10">
             <div class="px-4">
                 <div class="flex items-center justify-between h-16 relative">
@@ -84,7 +84,7 @@
     
     <main id="inicio" class=""> 
 
-        <div class="flex justify-center items-center w-screen h-full">
+        <div class="flex justify-center items-center w-full h-full">
             <div class="text-center px-4 mt-24">
                 <h2 class="text-5xl font-bold text-white mb-4 ">Contáctanos</h2>
                 <p class="text-white text-lg">Aceptamos efectivo, transferencia y débito como formas de pago. Además, ofrecemos envíos en el mismo día.</p>
@@ -117,8 +117,8 @@
         </div>
     </main>
 
-    <footer class="bg-amber-500 text-white mt-4 py-5">
-        <div class="container mx-auto px-4">
+    <footer class="bg-amber-500 text-white mt-4 w-full py-5">
+        <div class=" px-4">
             <p class="text-center">© 2024 Ferreteria Mica. Todos los derechos reservados.</p>
         </div>
     </footer>
